--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 </head>
 <body class="bg-gradient-to-br from-gray-950 to-indigo-900 text-gray-100 min-h-screen flex flex-col items-center p-4">
 
-    <!-- Main Container (PDF Lister & Viewer) -->
-    <div class="bg-gray-800 rounded-xl shadow-2xl p-6 w-full max-w-6xl mx-auto flex flex-col md:flex-row gap-6 border border-indigo-700">
+    <!-- Main Container (PDF Lister - now single column) -->
+    <div class="bg-gray-800 rounded-xl shadow-2xl p-6 w-full max-w-3xl mx-auto flex flex-col gap-6 border border-indigo-700">
 
-        <!-- Left Panel: Folder & PDF List -->
-        <div class="flex-1 bg-gray-900 p-6 rounded-lg border border-indigo-700 shadow-inner">
+        <!-- Left Panel: Folder & PDF List (now the main content) -->
+        <div class="bg-gray-900 p-6 rounded-lg border border-indigo-700 shadow-inner">
             <h1 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 mb-6 text-center">NoxBond's GitHub Archives</h1>
             <p class="text-sm text-gray-400 mb-4 text-center">
-                Navigate folders and view PDFs directly from your GitHub repository.
+                Navigate folders and access PDFs directly from your GitHub repository.
             </p>
 
             <!-- Navigation Controls -->
@@ -80,15 +80,6 @@
                     <li class="text-gray-500 text-center py-4">Loading content...</li>
                 </ul>
                 <p id="statusMessage" class="text-sm text-gray-400 mt-3 text-center"></p>
-            </div>
-        </div>
-
-        <!-- Right Panel: PDF Viewer -->
-        <div class="flex-1 bg-gray-900 p-6 rounded-lg border border-indigo-700 shadow-inner flex flex-col items-center justify-center">
-            <h2 class="text-xl font-semibold text-blue-400 mb-4">PDF Viewer</h2>
-            <div id="pdfViewerContainer" class="w-full h-full min-h-[500px] flex items-center justify-center bg-gray-700 rounded-lg overflow-hidden border border-gray-600">
-                <iframe id="pdfFrame" class="w-full h-full hidden" allowfullscreen></iframe>
-                <p id="viewerPlaceholder" class="text-gray-400 text-center p-4">Select a PDF to view it here.</p>
             </div>
         </div>
     </div>
@@ -193,8 +184,7 @@ python override.py</code></pre>
 
         // UI Elements
         const fileSystemList = document.getElementById('fileSystemList');
-        const pdfFrame = document.getElementById('pdfFrame');
-        const viewerPlaceholder = document.getElementById('viewerPlaceholder');
+        // Removed pdfFrame and viewerPlaceholder as they are no longer needed
         const statusMessage = document.getElementById('statusMessage');
         const backButton = document.getElementById('backButton');
         const currentPathDisplay = document.getElementById('currentPathDisplay');
@@ -218,13 +208,13 @@ python override.py</code></pre>
             try {
                 const response = await fetch(apiUrl, {
                     headers: {
-                        'Accept': 'application/vnd.github.v3+json'
+                        'Accept': 'application/vnd.github.com.v3+json' // Use v3 for broader compatibility if v3+json causes issues
                     }
                 });
 
                 if (!response.ok) {
                     if (response.status === 404) {
-                        statusMessage.textContent = `Error: Folder '${path}' not found or is empty.`;
+                        statusMessage.textContent = `Error: Folder '${path}' not found or is empty. Please ensure it exists and contains PDFs.`;
                     } else {
                         statusMessage.textContent = `Error fetching content: ${response.statusText}. Rate limit issues?`;
                     }
@@ -270,13 +260,17 @@ python override.py</code></pre>
                     
                     const nameSpan = document.createElement('span');
                     nameSpan.className = 'text-cyan-400 font-medium truncate flex-grow file-icon'; // Add file icon class and color
-                    nameSpan.textContent = pdf.name;
-                    nameSpan.title = pdf.name;
 
-                    // Use pdf.download_url directly for iframe display
-                    nameSpan.onclick = () => viewPdf(pdf.download_url); 
+                    // Create an anchor tag to open in new tab
+                    const aTag = document.createElement('a');
+                    aTag.href = pdf.download_url; // Use pdf.download_url for direct link
+                    aTag.target = "_blank"; // Crucially opens in a new tab
+                    aTag.rel = "noopener noreferrer"; // Security best practice for target="_blank"
+                    aTag.textContent = pdf.name;
+                    aTag.title = pdf.name;
+                    aTag.className = 'text-cyan-400 font-medium truncate flex-grow file-icon'; // Apply styles to anchor
 
-                    li.appendChild(nameSpan);
+                    li.appendChild(aTag); // Append the anchor tag to the list item
                     fileSystemList.appendChild(li);
                 });
 
@@ -287,16 +281,8 @@ python override.py</code></pre>
             }
         };
 
-        /**
-         * Displays a PDF in the iframe viewer.
-         * @param {string} url - The URL of the PDF to display.
-         */
-        const viewPdf = (url) => {
-            pdfFrame.src = url;
-            viewerPlaceholder.classList.add('hidden'); // Hide placeholder
-            pdfFrame.classList.remove('hidden'); // Show iframe
-        };
-
+        // Removed viewPdf function as it's no longer needed for iframe
+        
         /**
          * Handles the "Back" button click to navigate up one directory level.
          */
